# byl-shop

./: .gitignore  pyproject.toml
project/: settings.py  urls.py
project/accounts/: apps.py  forms.py  models.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py
project/accounts/templates/accounts/global/: base.html
project/accounts/templates/accounts/partials/: head.html
project/accounts/templates/registration/: login.html  register.html  register_complete.html
project/core/: admin.py  models.py  urls.py  views.py
project/core/management/commands/: insere_produtos.py
project/core/migrations/: 0001_initial.py  0002_produto_ativo_produto_atualizado_em_and_more.py
project/core/templates/core/global/: base.html
project/core/templates/core/pages/: detail.html  index.html  template.html
project/core/templates/core/partials/: head.html
