[tool.poetry]
name = "byl"
version = "0.1.0"
description = ""
authors = ["thomzera <93238590+thomzera@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
